--- a/src/styles/fn.less
+++ b/src/styles/fn.less
@@ -19,6 +19,13 @@
   left: unit(@l, rpx);
 }
 
+.whbr (@w, @h, @b, @r) {
+  width: unit(@w, rpx);
+  height: unit(@h, rpx);
+  bottom: unit(@b, rpx);
+  right: unit(@r, rpx);
+}
+
 .wh(@w, @h) {
   width: unit(@w, rpx);
   height: unit(@h, rpx);
